adding second notebook for training

--- a/Training_NN-plain.ipynb
+++ b/Training_NN-plain.ipynb
@@ -229,7 +229,7 @@
     "from keras import layers\n",
     "from keras.layers import Dropout\n",
     "\n",
-    "#proszę stworzyć sieć o 4 warstwach w kerasie:\n",
+    "#proszę wygenerować sieć o 4 warstwach w kerasie:\n",
     "# - gęsta z 512 neuronami, funkcją aktywacji ReLU, odpowiednim rozmiarem wejścia\n",
     "# - dropout ze współczynnikiem odrzucenia 40%\n",
     "# - gęsta z 256 neuronami, funkcją aktywacji Tanh\n",
