adding Tensorboard to first notebook

--- a/Training_NN-plain.ipynb
+++ b/Training_NN-plain.ipynb
@@ -23,6 +23,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# funkcje pomocnicze\n",
+    "from keras import backend as K\n",
+    "\n",
+    "def recall_m(y_true, y_pred):\n",
+    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "    possible_positives = K.sum(K.round(K.clip(y_true, 0, 1)))\n",
+    "    recall = true_positives / (possible_positives + K.epsilon())\n",
+    "    return recall\n",
+    "\n",
+    "def precision_m(y_true, y_pred):\n",
+    "    true_positives = K.sum(K.round(K.clip(y_true * y_pred, 0, 1)))\n",
+    "    predicted_positives = K.sum(K.round(K.clip(y_pred, 0, 1)))\n",
+    "    precision = true_positives / (predicted_positives + K.epsilon())\n",
+    "    return precision\n",
+    "\n",
+    "def f1_m(y_true, y_pred):\n",
+    "    precision = precision_m(y_true, y_pred)\n",
+    "    recall = recall_m(y_true, y_pred)\n",
+    "    return 2*((precision*recall)/(precision+recall+K.epsilon()))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "fdrX9lpR5_ug"
@@ -272,7 +301,8 @@
    },
    "outputs": [],
    "source": [
-    "#proszę skompilować sieć z optimizerem Adam, funkcją kosztu categorical crossentropy i śledzoną miarą accuracy\n"
+    "#proszę skompilować sieć z optimizerem Adam, funkcją kosztu categorical crossentropy i śledzonymi miarami:\n",
+    "#'accuracy', f1_m, precision_m, recall_m\n"
    ]
   },
   {
@@ -341,7 +371,32 @@
    },
    "outputs": [],
    "source": [
-    "# uczenie utworzonej sieci, liczba epok:10, wielkość batcha: 128\n"
+    "# uczenie utworzonej sieci, liczba epok:10, wielkość batcha: 128\n",
+    "#proszę podać dane testowe jako validation_data w procesie uczenia\n",
+    "#dla chętnych - proszę dodać callback, który stworzy logi dla Tensorboard\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#jeśli utworzono logi za pomocą callback można odkomentować poniższą linijkę\n",
+    "\n",
+    "# %load_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#jeśli utworzono logi za pomocą callback można odkomentować poniższą linijkę\n",
+    "\n",
+    "# tensorboard --logdir=network_logs"
    ]
   },
   {
@@ -350,8 +405,6 @@
     "id": "pqpdYbPa5_vI"
    },
    "source": [
-    "Podczas trenowania wyświetlane są dwie wartości: strata sieci jej dokładność (obie wartości dotyczą treningowego zbioru danych).\n",
-    "\n",
     "Podczas trenowania szybko osiągamy dokładność około 0,98 (98%). Teraz możemy sprawdzić dokładność przetwarzania testowego zbioru danych:\n"
    ]
   },
@@ -367,7 +420,8 @@
    },
    "outputs": [],
    "source": [
-    "# wyliczenie błędu oraz dokładności (accuracy) dla zbioru testowego\n"
+    "# inferencja na zbiorze testowym - proszę zapisać wyniki\n",
+    "test_results = None"
    ]
   },
   {
@@ -383,7 +437,7 @@
    },
    "outputs": [],
    "source": [
-    "#proszę wypisać dokładność zbioru testowego\n"
+    "#proszę wypisać dokładność zbioru testowego (druga wartość z test_results)\n"
    ]
   },
   {
