a few changes in continuation notebook

--- a/Training_NN_continuation-plain.ipynb
+++ b/Training_NN_continuation-plain.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "id": "swHNn-yE6pVA",
-    "outputId": "4e7bb6d3-f496-4104-a953-ca8a3c3bcf23"
+    "id": "swHNn-yE6pVA"
    },
    "outputs": [],
    "source": [
@@ -51,11 +46,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "AdyTfzZ_6pVP",
-    "outputId": "572d4588-59d9-4f57-9efd-8dcb6329721c"
+    "id": "AdyTfzZ_6pVP"
    },
    "outputs": [],
    "source": [
@@ -63,6 +54,7 @@
     "import numpy as np\n",
     "\n",
     "(train_data, train_labels), (test_data, test_labels) = imdb.load_data(num_words=10000)\n",
+    "EPOCHS = 20\n",
     "\n",
     "def vectorize_sequences(sequences, dimension=10000):\n",
     "    # Create an all-zero matrix of shape (len(sequences), dimension)\n",
@@ -122,7 +114,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "V9jfiCAv-CYh"
+   },
    "outputs": [],
    "source": [
     "benchmark_model.summary()"
@@ -131,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "WhV-NiOC-CYi"
+   },
    "outputs": [],
    "source": [
     "#proszę skompilować model, optimizer RMSprop, funkcja kosztu binary crossentropy i śledzoną miarą accuracy\n"
@@ -141,18 +137,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
     "id": "jTk07iv06pVY",
-    "outputId": "094933f8-26d8-49b7-de21-a865dcdc64d1",
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#proszę wytrenować powyższy model, liczba epok: 10, rozmiar batcha: 512, \n",
+    "#proszę wytrenować powyższy model, liczba epok: EPOCHS, rozmiar batcha: 512, \n",
     "#proszę podać dane testowe jako validation_data w procesie uczenia\n",
     "benchmark_hist = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epochs = range(1, EPOCHS+1)\n",
+    "benchmark_val_loss = benchmark_hist.history['val_loss']"
    ]
   },
   {
@@ -176,14 +178,15 @@
     "# - gęsta z 4 neuronami, funkcją aktywacji ReLU, odpowiednim rozmiarem wejścia\n",
     "# - gęsta z 4 neuronami, funkcją aktywacji ReLU\n",
     "# - gęsta z 1 neuronem wyjściowym, funkcja aktywacji sigmoid\n",
-    "smaller_model = models.Sequential()\n",
-    "\n"
+    "smaller_model = models.Sequential()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "FnOZs7gO-CYj"
+   },
    "outputs": [],
    "source": [
     "smaller_model.summary()"
@@ -192,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "XMGATXFN-CYj"
+   },
    "outputs": [],
    "source": [
     "#proszę skompilować model, optimizer RMSprop, funkcja kosztu binary crossentropy i śledzoną miarą accuracy\n"
@@ -212,15 +217,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "8gz0uyMS6pVa",
-    "outputId": "389fb373-ceac-412b-f5ff-cdea091e33fa"
+    "id": "8gz0uyMS6pVa"
    },
    "outputs": [],
    "source": [
-    "#proszę wytrenować powyższy model, liczba epok: 10, rozmiar batcha: 512, \n",
+    "#proszę wytrenować powyższy model, liczba epok: EPOCHS, rozmiar batcha: 512, \n",
     "#proszę podać dane testowe jako validation_data w procesie uczenia\n",
     "smaller_model_hist = None"
    ]
@@ -233,8 +234,6 @@
    },
    "outputs": [],
    "source": [
-    "epochs = range(1, 11)\n",
-    "benchmark_val_loss = benchmark_hist.history['val_loss']\n",
     "smaller_model_val_loss = smaller_model_hist.history['val_loss']"
    ]
   },
@@ -242,12 +241,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 279
-    },
     "id": "h5vIEzAr6pVe",
-    "outputId": "9fe21674-a1ce-460f-a25e-06d7dba4339d",
     "scrolled": true
    },
    "outputs": [],
@@ -295,7 +289,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "T5hHjhcl-CYl"
+   },
    "outputs": [],
    "source": [
     "bigger_model.summary()"
@@ -304,7 +300,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "0d7fOkl6-CYl"
+   },
    "outputs": [],
    "source": [
     "#proszę skompilować model, optimizer RMSprop, funkcja kosztu binary crossentropy i śledzoną miarą accuracy\n"
@@ -314,15 +312,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "E7cCZnbt6pVj",
-    "outputId": "f8e683d7-35d6-4d2f-9f0e-e7b322fccd07"
+    "id": "E7cCZnbt6pVj"
    },
    "outputs": [],
    "source": [
-    "#proszę wytrenować powyższy model, liczba epok: 10, rozmiar batcha: 512, \n",
+    "#proszę wytrenować powyższy model, liczba epok: EPOCHS, rozmiar batcha: 512, \n",
     "#proszę podać dane testowe jako validation_data w procesie uczenia\n",
     "bigger_model_hist = None"
    ]
@@ -340,12 +334,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 279
-    },
     "id": "lmkqo28u6pVm",
-    "outputId": "81533820-6b9e-4faf-c8cb-03d9e08b25f3",
     "scrolled": true
    },
    "outputs": [],
@@ -390,12 +379,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 279
-    },
     "id": "XqLbAIfo6pVr",
-    "outputId": "f48319da-adfc-40b0-cc92-5cc06676a1e6",
     "scrolled": true
    },
    "outputs": [],
@@ -431,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "TA4CXLgj-CYn"
+   },
    "outputs": [],
    "source": []
   },
@@ -485,7 +471,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "kDokDeUO-CYn"
+   },
    "outputs": [],
    "source": [
     "l2_model.summary()"
@@ -517,16 +505,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
     "id": "ZpNNizcz6pV3",
-    "outputId": "ce797ded-b684-4482-bdc9-57e6a1fadb67",
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#proszę wytrenować powyższy model, liczba epok: 10, rozmiar batcha: 512, \n",
+    "#proszę wytrenować powyższy model, liczba epok: EPOCHS, rozmiar batcha: 512, \n",
     "#proszę podać dane testowe jako validation_data w procesie uczenia\n",
     "l2_model_hist = None"
    ]
@@ -535,12 +519,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 279
-    },
-    "id": "lO0JoiRX6pV4",
-    "outputId": "d02bfd0d-83df-4b32-cf4b-d37e2ed880cd"
+    "id": "lO0JoiRX6pV4"
    },
    "outputs": [],
    "source": [
@@ -574,11 +553,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "xQq-WU7i6pV6",
-    "outputId": "05ba69c0-6d01-4226-c0d8-670028e1ecfc"
+    "id": "xQq-WU7i6pV6"
    },
    "outputs": [],
    "source": [
@@ -653,7 +628,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "NcVuxWbD-CYr"
+   },
    "outputs": [],
    "source": [
     "dropout_model.summary()"
@@ -662,7 +639,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "QYurnFH7-CYr"
+   },
    "outputs": [],
    "source": [
     "#proszę skompilować model, optimizer RMSprop, funkcja kosztu binary crossentropy i śledzoną miarą accuracy\n"
@@ -672,15 +651,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "V2eyXv1T6pWE",
-    "outputId": "d54da5ee-359f-4d60-8e55-4e2b5f710c03"
+    "id": "V2eyXv1T6pWE"
    },
    "outputs": [],
    "source": [
-    "#proszę wytrenować powyższy model, liczba epok: 10, rozmiar batcha: 512, \n",
+    "#proszę wytrenować powyższy model, liczba epok: EPOCHS, rozmiar batcha: 512, \n",
     "#proszę podać dane testowe jako validation_data w procesie uczenia\n",
     "dropout_model_hist = None"
    ]
@@ -703,6 +678,7 @@
    },
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "dropout_model_val_loss = dropout_model_hist.history['val_loss']\n",
     "\n",
     "plt.plot(epochs, benchmark_val_loss, 'b+', label='Bazowy model')\n",
@@ -735,7 +711,8 @@
  "metadata": {
   "accelerator": "GPU",
   "colab": {
-   "name": "Training_NN_continuation.ipynb",
+   "collapsed_sections": [],
+   "name": "Training_NN_continuation-plain.ipynb",
    "provenance": []
   },
   "kernelspec": {
